Working latency analysis